<resources>
    <string name="app_name" translatable="false">GlassGo!</string>
    <string name="trophy_amount">Trophies: %d</string>
    <string name="lvl_info">Level %d</string>
    <string name="progress_text" translatable="false">%d/%d</string>
    <string name="percentage" translatable="false">%d%%</string>
    <string name="drink_amount">%.2f l</string>
    <string name="int_from_int">%d from %d</string>
    <string name="days_in_row">%d days in a row</string>
    <string name="days_in_row_text">days in a row</string>
    <string name="float_number" translatable="false">%.2f</string>
    <string name="int_number" translatable="false">%d</string>
    <string name="highest_score">Highest: %d</string>
    <string name="water_info">%.2f<small>l</small> of %.2f<small>l</small></string>
    <string name="name_hint">Your name</string>
    <string name="settings_heading">Settings</string>
    <string name="notifications_heading">Notifications</string>
    <string name="reset_water">Reset</string>
    <string name="chronology_string">Chronology</string>
    <string name="simple_string">Simple</string>
    <string name="empty_chronology_message">Add your first drink today</string>
    <string name="customization">Customization</string>
    <string name="thank_you">Thank you for using our app!</string>
    <string name="advert_available">One gem available</string>

    <string name="stat_section">Statistics</string>
    <string name="weight_section">Weight</string>
    <string name="workout_section">Workout time</string>
    <string name="avatar_section">Avatar</string>
    <string name="mask">Mask</string>
    <string name="hat">Hat</string>
    <string name="sex_male">Male</string>
    <string name="sex_female">Female</string>
    <string name="weight_abbr">kg</string>
    <string name="time_abbr">hr</string>

    <string name="drink_water">Water</string>
    <string name="drink_water_gas">Sparkling water</string>
    <string name="drink_tea">Tea</string>
    <string name="drink_coffee">Coffee</string>
    <string name="drink_coffee_milk">Coffee with milk</string>
    <string name="drink_alco">Alcohol</string>
    <string name="daily_section">Today drinks</string>
    <string name="achievement_section">Achievements</string>
    <string name="name_section">Name</string>
    <string name="sex_section">Sex</string>
    <string name="drink_energy">Energy drink</string>

    <string name="ach_day_1">First steps</string>
    <string name="ach_day_1_des">Your first day of staying hydrated.</string>
    <string name="ach_day_3">Little by little</string>
    <string name="ach_day_3_des">Three days in a row. Impressive!</string>
    <string name="ach_day_10">Regularity</string>
    <string name="ach_day_10_des">Ten days passed. Purposefulness suits you!</string>
    <string name="ach_day_40">Harmony</string>
    <string name="ach_day_40_des">Forty days! Say hello to a good habit.</string>
    <string name="ach_day_100">Aquaman</string>
    <string name="ach_day_100_des">Wow! 100 days. You are the chosen one!</string>
    <string name="ach_day_365">Unstoppable</string>
    <string name="ach_day_365_des">365 days… Nothing can stop you.</string>

    <string name="ach_lvl_3">Beginner</string>
    <string name="ach_lvl_3_des">You have reached level 3.</string>
    <string name="ach_lvl_10">Self-taught</string>
    <string name="ach_lvl_10_des">You have reached level 10.</string>
    <string name="ach_lvl_20">Student</string>
    <string name="ach_lvl_20_des">You have reached level 20.</string>
    <string name="ach_lvl_30">Professional</string>
    <string name="ach_lvl_30_des">You have reached level 30.</string>
    <string name="ach_lvl_50">Wise mentor</string>
    <string name="ach_lvl_50_des">You have reached level 50.</string>

    <string name="ach_all">Variety lover</string>
    <string name="ach_all_des">You tried all drinks in one day.</string>
    <string name="ach_coffee">Chill out</string>
    <string name="ach_coffee_des">One month without coffee.</string>
    <string name="ach_alco">Stone-cold sober</string>
    <string name="ach_alco_des">One month without alcohol.</string>

    <string name="avatar_blue_drop">Blue Blobby</string>
    <string name="avatar_pink_drop">Pink Blobby</string>
    <string name="avatar_cat">Gray kitty</string>
    <string name="avatar_red_cat">Red kitty</string>
    <string name="avatar_mouse">Mouse</string>
    <string name="floppa_test">Floppa</string>
    <string name="bingus_test">Bingus</string>
    <string name="floppa_test_description">Russian cat</string>
    <string name="bingus_test_description">Bingus club</string>
    <string name="avatar_cat_des">Very curious and charming</string>
    <string name="avatar_red_cat_des">Playful wool ball</string>
    <string name="avatar_mouse_des">Lurking in the corner</string>
    <string name="avatar_base_des">Base avatar</string>
    <string name="avatar_rating_des">Rate our app</string>
    <string name="question_mark" translatable="false">\?</string>

    <string name="hello_launch">Hey!\nWhat\'s your name?</string>
    <string name="blank_field_launch">blank field</string>
    <string name="sex_launch">Who are you?</string>
    <string name="weight_launch">What is your weight?</string>
    <string name="act_time_launch">What is your average workout duration?</string>
    <string name="act_time_error_launch">hours per day</string>
    <string name="next_launch">Next</string>
    <string name="done_launch">Done</string>


    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-2321454692684784/7338495704</string>
    <string name="reward_ad_unit_id" translatable="false">ca-app-pub-2321454692684784/9936738880</string>

    <!-- FAKE ADS
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="reward_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/5224354917</string>
    -->

    <string name="privacy_link">Privacy policy</string>

    <string name="bow">Bow</string>
    <string name="sunglasses">Sunglasses</string>
    <string name="crown">Crown</string>
    <string name="eye_patch">Eye patch</string>
    <string name="nothing">Nothing</string>

    <string name="tutorial_drink">Add your first drink</string>
    <string name="tutorial_drink_description">Tap to open water editor.</string>
    <string name="tutorial_coins">Coins</string>
    <string name="tutorial_coins_description">Earn coins to customize your avatar. You can get coins for completing your norm, accomplishing achievements and level up.</string>
    <string name="tutorial_exp">Level</string>
    <string name="tutorial_exp_description">You get +50 exp a day and some exp for accomplishing achievements.</string>
    <string name="tutorial_settings_description">Tap to change your personal information or customize avatar.</string>
    <string name="tutorial_stat_description">Tap on column to find out the amount of liquid on a specific day.</string>
    <string name="tutorial_change">Today drinks</string>
    <string name="tutorial_change_description">Tap to change the appearance of your daily statistics.</string>

    <string name="notification_title">Water time</string>
    <string name="notification_des">Hey, it\'s time for another glass of water!</string>

    <string name="min_30">30 minutes</string>
    <string name="hour_1">1 hour</string>
    <string name="hour_2">2 hours</string>
    <string name="hour_5">5 hours</string>
    <string name="wake_up">Wake at</string>
    <string name="sleep">Sleep at</string>
</resources>