<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".NotificationActivity">

    <TextView
        android:id="@+id/notifMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Уведомления отключены"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/notifications_heading"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/notifOffOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="updateVisibility"
        app:layout_constraintEnd_toEndOf="@+id/textView20"
        app:layout_constraintTop_toTopOf="@+id/textView20" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#CDCDCD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RadioGroup
        android:id="@+id/radioFreq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <RadioButton
            android:id="@+id/radio30Min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/min_30" />

        <RadioButton
            android:id="@+id/radio1Hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hour_1" />

        <RadioButton
            android:id="@+id/radio2Hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hour_2" />

        <RadioButton
            android:id="@+id/radio5Hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hour_5" />
    </RadioGroup>

    <nl.joery.timerangepicker.TimeRangePicker
        android:id="@+id/picker"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioFreq"
        app:layout_constraintTop_toBottomOf="@+id/time_layout"
        app:trp_endTime="6:30"
        app:trp_sliderRangeGradientEnd="@color/blue_number"
        app:trp_sliderRangeGradientMiddle="@color/purple_200"
        app:trp_sliderRangeGradientStart="@color/orange_sunrise"
        app:trp_startTime="22:00"
        app:trp_clockVisible="false"
        app:trp_thumbIconColor="@color/white"
        app:trp_thumbIconEnd="@drawable/ic_moon"
        app:trp_thumbIconStart="@drawable/ic_alarm" />

    <LinearLayout
        android:id="@+id/time_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioFreq"
        app:layout_constraintTop_toTopOf="@+id/radioFreq">

        <LinearLayout
            android:id="@+id/bedtime_layout"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/wake_up"
                android:src="@drawable/ic_alarm"
                app:tint="#000" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wake_up"
                    android:textAlignment="center"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/start_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textColor="?android:textColorPrimary"
                    tools:text="8:30" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/wake_layout"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="4dp"
            android:paddingStart="20dp"
            android:paddingBottom="4dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/sleep"
                android:src="@drawable/ic_moon"
                app:tint="#000" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sleep"
                    android:textAlignment="center"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/end_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="20sp"
                    tools:text="8:30" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="1dp"
        android:background="#CDCDCD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/picker">
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>